--- a/Aula6/LojaConstrucao/Loja/Views/Shared/_Layout.cshtml
+++ b/Aula6/LojaConstrucao/Loja/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Index">Cliente</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="Index">Produtos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
