--- a/Aula6/LojaConstrucao/Loja/Views/Produto/Index.cshtml
+++ b/Aula6/LojaConstrucao/Loja/Views/Produto/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Produto>
 
 <h1>Lista de produtos</h1>
-<a asp-action="Create" class="btn btn-outline-primary">Adicionar Produto</a>
+<a asp-action="Create" class="btn btn-primary">Adicionar Novo Produto</a>
 <hr />
 
 <table class="table table-dark">
