--- a/Aula12/MVCMovie/MVCMovie/Views/Shared/_Layout.cshtml
+++ b/Aula12/MVCMovie/MVCMovie/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movies Index</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Administrators" asp-action="Index">Administrador</a>
+                        </li>
+
+
                     </ul>
                 </div>
             </div>
@@ -47,6 +53,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+  
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
